2008-04-09  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/layout.c (igraph_reingold_tilford) :
	really fixed issue #100 :)
	* src/layout.c (igraph_reingold_tilford_circular) :
	fixed documentation and the handling of negative X coords
	
2008-04-07  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/structure_generators.c (igraph_weighted_adjacency) : now
	handles fractional edge weights correctly
	
	* src/layout.c (igraph_reingold_tilford) : fixed issue #100
	
2008-04-05  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/structure_generators.c (igraph_weighted_adjacency) : added
	
	* examples/simple/igraph_weighted_adjacency.{c,out} : added
	
2008-04-05  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/cattributes.c (igraph_i_cattribute_add_{edges,vertices}) :
	fixed a memory leak
	
2008-04-03  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/foreign.c (igraph_write_graph_pajek) : fixed issue #105

2008-03-25  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/foreign.c (igraph_write_graph_gml) : directed graphs
	are now treated correctly (same as in igraph_read_graph_gml)

2008-03-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_unfold_tree) : added

	* src/layout.c (igraph_layout_fruchterman_reingold) :
	'miny' and 'maxy' arguments added

	* src/layout.c (igraph_layout_kamada_kawai_3d) : 'fixz'
	argument added

2008-03-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/cattributes.c (igraph_i_cattribute_get_string_vertex_attr)
	(igraph_i_cattribute_get_string_edge_attr)
	(igraph_i_cattribute_EAS_set) : bugs corrected

2008-02-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_reingold_tilford)
	(igraph_layout_reingold_tilford_circular) : 'mode' and 'rootlevel' 
	 arguments added, 'roots' (instead of 'root') is a vector now.
	 This allows better handling of unconnected graphs.

2008-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/centrality.c (igraph_pagerank) : fixed issue #77

2008-02-21  Gabor Csardi  <csardi@rmki.kfki.hu>
