@@ -1,3 +1,8 @@
+2008-04-24  Tamas Nepusz  <ntamas@rmki.kfki.hu>
+
+	* src/foreign-graphml.c : fixed bug when a graph attribute was
+	defined but its value not given in a GraphML file
+
 2008-04-09  Tamas Nepusz  <ntamas@rmki.kfki.hu>
 
 	* src/layout.c (igraph_reingold_tilford) :
